# GraphBin2

./: .gitignore  README.md  environment.yml  graphbin2  graphbin2.py  mkdocs.yml  pyproject.toml  setup.py
.github/workflows/: codeql.yml  testing.yml
docs/: citation.md  index.md  install.md  preprocess.md  results.md  support.md  usage.md  workflow.md
src/: graph_utils.py  graphbin2_Flye.py  graphbin2_SGA.py  graphbin2_SPAdes.py
src/graphbin2/: __init__.py  cli.py  graphbin2_Flye.py  graphbin2_MEGAHIT.py  graphbin2_SGA.py  graphbin2_SPAdes.py
src/graphbin2/support/: README.md  gfa2fasta.py  prepResult.py
src/support/: gfa2fasta.py  prepResult.py
support/: README.md  gfa2fasta.py  prepResult.py
test_data/Sim-10G+SGA/: abundance.abund
test_data/Sim-5G+SGA/: abundance.abund
tests/: test_cli.py  test_graphbin2.py  test_support.py
tests/data/1Y3B_Flye/: abundance.tsv  assembly_info.txt
tests/data/ESC_MEGAHIT/: abundance.tsv
tests/data/Sim-10G+SGA/: abundance.abund  initial_contig_bins.csv
tests/data/Sim-10G+metaSPAdes/: abundance.abund  bin_ids.csv  initial_contig_bins.csv
tests/data/Sim-5G+SGA/: initial_contig_bins.csv
tests/data/Sim-5G+metaSPAdes/: abundance.abund  initial_contig_bins.csv
