[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "graphbin2"
authors = [{name = "Vijini Mallawaarachchi", email = "viji.mallawaarachchi@gmail.com"}]
keywords = ["metagenomics", "binning", "contigs", "bioinformatics"]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9,<3.13"
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies=[
    "biopython",
    "python-igraph",
    "scipy",
    "tqdm",
    "click",
]
# the following are inferred from the source code
dynamic = ["version", "description"]

[project.sdist]
include = ["doc/", "requirements.txt", "src/*", "pyproject.toml"]
exclude = ["doc/*.html"]

[project.urls]
Home = "https://github.com/metagentools/GraphBin2"

[project.scripts]
graphbin2 = "graphbin2.cli:main"
prepResult = "graphbin2.support.prepResult:main"

[project.optional-dependencies]
test = [
    "nox",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
]
dev = [
    "black",
    "click",
    "docformatter",
    "flit",
    "nox",
    "isort",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
]

[tool.flit.sdist]
include = ["docs/", "requirements.txt", "src/*", "pyproject.toml"]
exclude = ["docs/*.html"]

[tool.pytest.ini_options]
addopts = ["--strict-config", "-ra"]
testpaths = "tests"

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | doc
  | dist
  | tests/data
)/
'''

[tool.isort]
atomic=true
force_grid_wrap=0
include_trailing_comma=true
lines_after_imports=2
lines_between_types=1
multi_line_output=3
use_parentheses=true